# ad

./: .gitignore  ChangeLog  Doxyfile  Makefile  Makefile.am  NEWS  README  README.md  ad.c  ad.css  bootstrap  configure.ac  devclean  makedoc.sh
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement-request.md
formats/: gif.ad  jpeg.ad  tsidx.ad
lib/: .gitignore  Makefile.am  assert.h  c++defs.h  intprops.h  limits.in.h  strsep.c  unistd.h  verify.h
m4/: .gitignore  getdelim.m4  getline.m4  gnulib-cache.m4  gnulib-comp.m4  malloc.m4  pjl_check_typedef.m4  strerror.m4
man/: Makefile.am
man/man1/: Makefile.am  ad.1
snippet/: arg-nonnull.h  c++defs.h  warn-on-use.h
src/: .gitignore  .lldbinit  Makefile.am  ad.c  ad.h  ad_lldb.py  ad_parser.h  array.c  array.h  check.c  color.c  color.h  common.h  compile.c  dam_lev.c  dam_lev.h  debug.c  debug.h  did_you_mean.c  did_you_mean.h  dump.c  dump_c.c  dump_format.c  expr.c  expr.h  filebuf.c  filebuf.h  format.c  in_attr.c  in_attr.h  include-tidy.toml  jpeg.ad  keyword.c  keyword.h  lexer.h  lexer.l  literals.c  literals.h  match.c  match.h  (+35 more)
src/ad.dSYM/Contents/: Info.plist
test/: Makefile.am  run_test.sh
test/data/: .gitattributes  Waldo.txt  bad_patch-1.txt  bad_patch-2.txt  bad_patch-3.txt  bad_patch-4.txt  bad_patch-5.txt  endian.txt  gap_patch-1.txt  last_row-2.txt  last_row-3.txt  patch-1.txt  row_separator.txt
test/expected/: ad--c-array.txt  ad-A.txt  ad-B2-E1-m_02.txt  ad-B2-e1-m_01.txt  ad-B4-E1-m_02.txt  ad-B4-E8-m-p.txt  ad-B4-e1-m_01.txt  ad-Cc.txt  ad-Ci.txt  ad-Cilu.txt  ad-Cis.txt  ad-Ciu.txt  ad-Cl.txt  ad-Ct.txt  ad-Cu.txt  ad-E0x0102-m_02.txt  ad-E0x010203-m_02.txt  ad-E0x01020304-m_02.txt  ad-E0x0102030405-m_02.txt  ad-E0x010203040506-m_02.txt  ad-E0x01020304050607-m_02.txt  ad-E0x0102030405060708-m_02.txt  ad-E0xD8FF-m.txt  ad-E0xFFD8-m.txt  ad-N01.txt  ad-N0xf.txt  ad-N1.txt  ad-N14+02.txt  ad-N15.txt  ad-N16.txt  ad-N17.txt  ad-N2.txt  ad-N3.txt  ad-N4.txt  ad-O_02.txt  ad-P.txt  ad-R_09.txt  ad-S_02.txt  ad-cnever-p_01.txt  ad-d.txt  (+38 more)
test/tests/: README.md  ad+16+X.test  ad--c-array.test  ad-A.test  ad-B1-e257.test  ad-B16-e1.test  ad-B2-E1-m_02.test  ad-B2-e1-m_01.test  ad-B2-e65536.test  ad-B2.test  ad-B4-E1-m.test  ad-B4-E1-m_02.test  ad-B4-E8-m-p.test  ad-B4-e1-m_01.test  ad-B4-e4294967296.test  ad-Cc.test  ad-Ccc.test  ad-Cci.test  ad-Ci.test  ad-Cii.test  ad-Cilu.test  ad-Cis.test  ad-Cit.test  ad-Ciu.test  ad-Cl.test  ad-Cll.test  ad-Clt.test  ad-Css.test  ad-Ct.test  ad-Ctt.test  ad-Ctu.test  ad-Cu.test  ad-Cuu.test  ad-Cx.test  ad-E0x0102-m_02.test  ad-E0x010203-m_02.test  ad-E0x01020304-m_02.test  ad-E0x0102030405-m_02.test  ad-E0x010203040506-m_02.test  ad-E0x01020304050607-m_02.test  (+105 more)
